<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Campos Input -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier_data"
            style="@style/CategoryStyle" />

        <!-- Campos Input -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Supplier Phone field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/hint_product_supplier_phone"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>