<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailsActivity">

    <!-- Nome -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_product_name" />
        <!-- Campos Input -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <TextView
                android:id="@+id/tv_product_name"
                style="@style/EditorFieldStyle"
                android:gravity="center_horizontal"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!-- Preço -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_product_price" />

        <!-- Campo Input -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <TextView
                android:id="@+id/tv_product_price"
                style="@style/EditorFieldStyle"
                android:gravity="center_horizontal"
                android:hint="@string/hint_product_price"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>

    <!-- Quantidade -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_product_quantity" />

        <!-- Campos Input -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Quantity field -->
            <TextView
                android:id="@+id/tv_product_quantity"
                style="@style/EditorFieldStyle"
                android:gravity="center_horizontal"
                android:hint="@string/hint_product_quantity"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnless"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/colorAccent"
                    android:text="-"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnplus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@color/colorAccent"
                    android:text="+"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <!-- Supplier name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_product_supplier_name" />

        <!-- Campos Input -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier Name field -->
            <TextView
                android:id="@+id/tv_supplier_name"
                style="@style/EditorFieldStyle"
                android:gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier phone -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/hint_product_supplier_phone" />

        <!-- Campos Input -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier Phone field -->
            <TextView
                android:id="@+id/tv_supplier_phone"
                style="@style/EditorFieldStyle"
                android:gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:padding="5dp"
            android:text="@string/add_cart"
            android:textColor="#fff" />

    </LinearLayout>

</LinearLayout>